--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h3>${r.platform.type}, ${r.platform.vendor}, ${r.platform.model}</h3>
       <h4>${r.engine.name} ${r.platform.version}</h4>
       <br>
-      <p>width:${window.innerWidth} height: ${window.innerHeight}</p>
+      <h2>width:${window.innerWidth} height: ${window.innerHeight}</h2>
     `;
   </script>
 </body>
